--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "run": "node server.js"
   },
   "dependencies": {
     "express": "^4.16.2",
