Because Nette said something about commitment issues.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "run": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.2",
     "mysql2": "^1.6.1",
     "sequelize": "^4.39.0"
