--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.2",
     "mysql2": "^1.6.1",
+    "react-router": "^4.3.1",
     "sequelize": "^4.39.0"
   },
   "devDependencies": {
